# menu-scraper

./: .cursorrules  README.md  env.example  package-lock.json  package.json
__tests__/: core-api-service.test.ts
app/: globals.css  layout.tsx  page.tsx
app/api/bulk-upload/: route.ts
app/api/products/save/: route.ts
app/apptizer-demo/: page.tsx
app/llm-demo/: page.tsx
app/menu-review/: page.tsx
app/products/: page.tsx
app/products/menu-review/: page.tsx
components/demo/: apptizer-api-demo.tsx  llm-processor-demo.tsx
components/layout/: navigation.tsx
docs/: CORE_API_INTEGRATION.md  FILE_PARSER_SYSTEM.md
hooks/: index.ts  use-apptizer-api.ts  use-file-parser.ts  use-image-parse.ts  use-llm-process.ts  use-pdf-parse.ts  use-save-products.ts
lib/: api-client.ts
menu-scraper-server/: .gitignore  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
menu-scraper-server/app/: main.py
menu-scraper-server/app/api/: deps.py
menu-scraper-server/app/api/v1/: routes_health.py  routes_menu.py
menu-scraper-server/app/core/: config.py  logging.py
menu-scraper-server/app/models/: errors.py  purchase_entry.py
menu-scraper-server/app/services/: core_api_service.py  llm_service.py  ocr_service.py
menu-scraper-server/app/utils/: file_utils.py  validation.py
menu-scraper-server/tests/: test_routes.py  test_services.py
public/prompts/: meta-prompt.md
services/: apptizer-service.ts  core-api-service.ts  file-utils.ts  image-service.ts  index.ts  llm-service.ts  pdf-service.ts
types/: product-model.ts
